<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.zybooks.assignment06.MainActivity">

   <EditText
       android:id="@+id/expenseText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:hint="@string/expense_name"
       android:textSize="25sp" />

   <EditText
       android:id="@+id/amountText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:inputType="text"
       android:hint="@string/amount"
       android:textSize="25sp" />

   <Button
       android:id="@+id/addExpenseBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:text="@string/add_expense" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp" />
</LinearLayout>
